[project]
name = "better-kan"
version = "0.1.0"
description = "An efficient pure-PyTorch implementation of Kolmogorov-Arnold Network (KAN) including plotting and pruning."
authors = [
    {name = "Hadrien Vroylandt", email = "hadrien.vroylandt@enpc.fr"},
]
dependencies = [
    "torch>=2.2.0",
    "pytest>=8.2.0",
    "tqdm>=4.66.2",
    "networkx"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
